--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -13,12 +13,37 @@
 <body>
     
 
-    <i class="fa-solid fa-house"></i>
+    <div class="quote-container" id="quote-container">
+
+            <!-- Quote -->
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote">Every man dies. Not every man really lives. </span>
+        </div>
+
+        <!-- Author -->
+        <div class="quote-author">
+            <div id="author">
+                Gustave Flaubert 
+            </div>
+        </div>
+
+        <!-- buttons --> 
+
+        <div class="button-container">
+            <button class="twitter-button" id="twitter-button"> 
+                <i class="fab fa-twitter"></i>
+            </button>
+            <button id="new-quote">New Quote</button>
+        </div>
+
+    </div>
 
 
 
 
 <!-- scripts -->
+    <script src="quotes.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
