--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -18,13 +18,13 @@
             <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Every man dies. Not every man really lives. </span>
+            <span id="quote"></span>
         </div>
 
         <!-- Author -->
         <div class="quote-author">
             <div id="author">
-                Gustave Flaubert 
+                
             </div>
         </div>
 
@@ -38,7 +38,10 @@
         </div>
 
     </div>
+    <div class="loader" id="loader">
 
+        
+    </div>
 
 
 
